# igv_web_app

./: .gitignore  README.md  pyproject.toml
app/: routes.py
app/static/testdata/: test.cons.bam  test.cons.bam.bai
app/templates/: index.html
tests/: test_app.py
